# Portfolio

./: README.md
Inżynieria_Uczenia_Maszynowego/Phase2/app/: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
Inżynieria_Uczenia_Maszynowego/Phase2/app/api/: routes.py
Inżynieria_Uczenia_Maszynowego/Phase2/app/config/: settings.py
Inżynieria_Uczenia_Maszynowego/Phase2/app/db/: __init__.py  database.py  models.py
Inżynieria_Uczenia_Maszynowego/Phase2/app/models/: baseline_model.pkl  model_metadata.pkl
Inżynieria_Uczenia_Maszynowego/Phase2/app/schemas/: __init__.py  prediction.py
Inżynieria_Uczenia_Maszynowego/Phase2/app/scripts/: run_ab_test.py  train.py
Inżynieria_Uczenia_Maszynowego/Phase2/app/services/: __init__.py  metrics.py  model_service.py
Inżynieria_Uczenia_Maszynowego/Phase2/app/tests/: conftest.py  test_api.py  test_models.py  test_schemas.py
PZSP2/server/: .env.example  pyproject.toml
PZSP2/server/alembic/: env.py
PZSP2/server/alembic/versions/: 67c4f22a0032_remove_scheduleexception_table.py  bd1d58b68bd1_initial_migration.py  d7a07c78982e_split_full_name_into_first_name_and_.py
PZSP2/server/app/: main.py
PZSP2/server/app/api/: deps.py
PZSP2/server/app/auth/: crud.py  users.py
PZSP2/server/app/core/: config.py  db.py
PZSP2/server/app/models/: __init__.py  attendance.py  log.py  notification.py  package.py  payment.py  request.py  semester.py
PZSP2/server/app/schemas/: class_group.py  class_session.py  contact.py  instructor_substitution.py  payment.py  public_schedule.py  (+3 more)
PZSP2/server/scripts/: example_data.sql
(+746 files in other folders)
